--- a/src/translations/es/registration.json
+++ b/src/translations/es/registration.json
@@ -4,10 +4,10 @@
     "first-name": "Nombre",
     "last-name": "Apellido",
     "id-number": "Número de identificación",
-    "date-birth": "Fechad de nacimiento",
+    "date-birth": "Fecha de nacimiento",
     "address": "Dirección de residencia",
     "email": "Correo",
-    "number": "Npumero telefónico",
+    "number": "Número telefónico",
     "password": "Contraseña",
     "profile-photo": "FOTO DE PERFIL",
     "id-photo": "FOTO DOC. ID",
