Implementacion Funcionalides paginas ServiceInfo, ServiceDetails, ServiceList, TableWorkerOrders, FormWorkerProfile, WorkerService

--- a/src/translations/en/registration.json
+++ b/src/translations/en/registration.json
@@ -12,7 +12,7 @@
     "profile-photo": "PROFILE PHOTO",
     "id-photo": "ID PHOTO",
     "bill-photo": "BILL PHOTO",
-    "verify": "Verify",
+    "verify": "Update Data",
     "error": {
       "require": "Require",
       "invalid-email": "Invalid email",
